overflow bugs

--- a/style2.css
+++ b/style2.css
@@ -106,6 +106,7 @@ width: 50px;
 height: 30px;
 background-color: none;
 transform: rotate(0deg);
+overflow: hidden;
 }
 
 #jyhead{
